# docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 2.0.0
 
 servers:
-  - url: http://localhost:4000/api
+  - url: http://localhost:8080/api
     description: production(予定)
 paths:
   /results:
@@ -393,6 +393,53 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Questions'
+  /auth/code:
+    post:
+      tags:
+        - auth
+      summary: Generate codeVerifier
+      responses:
+        '200':
+          description: A JSON model of PkceParams
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/PkceParams'
+  /auth/callback:
+    get:
+      tags:
+        - auth
+      parameters:
+        - name: code
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The authorize is finish successfully
+  /me:
+    get:
+      summary: get user data from traq
+      responses:
+        '200':
+          description: A JSON model of User
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/User'
+  /me/group:
+    get:
+      summary: get group data from traq
+      responses:
+        '200':
+          description: A JSON model of User
+          content:
+            application/json:
+              schema:
+                type: string
 components:
   schemas:
     Instance:
@@ -573,4 +620,23 @@ components:
         - name
       properties:
         betterize: 
+          type: string
+    PkceParams:
+      type: object
+      required:
+        - code_challenge
+        - code_challenge_method
+        - code_verifier
+        - client_id
+        - response_type
+      properties:
+        code_challenge:
+          type: string
+        code_challenge_method:
+          type: string
+        code_verifier:
+          type: string
+        client_id:
+          type: string
+        response_type:
           type: string
